--- a/pages/lugares.html
+++ b/pages/lugares.html
@@ -158,7 +158,7 @@
             </div>
         </div>
         
-        <p>&copy; 2022 Adriano Francioni</p> 
+        <p>&copy; 2022 Matias Illanes</p> 
 
     </footer>
 
