--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         
-        <p>&copy; 2022 Adriano Francioni</p> 
+        <p>&copy; 2022 Matias Illanes</p>  
 
     </footer>
 
